--- a/estilo.css
+++ b/estilo.css
@@ -65,5 +65,33 @@ section.final{
     background-repeat: no-repeat;
     background-size: 90px;
     background-position-x: right;
-    
+}
+section.rodape{
+    width: 100%;
+    height: 150px;
+    background-color: #0c362b;
+}
+div.menu2{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 120px;
+    height: 30px;
+    /*background-color: rgb(1, 95, 95);*/
+    border-radius: 50px;
+    color: #005a42;
+    font-weight: bold;
+    cursor: pointer;
+}
+section{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    flex-direction: row;
+    width: 100%;
+    height: 200px;
+}
+img.meio{
+    width: 100%;
+
 }
